--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 <body>
     <div id="box"></div>
     <div id="controls">
-        <h3 for="tl">Top Left:</h3>
-        <input type="range" id="tl" value="0">
+        <h3 id="topLeft">Top Left:</h3>
+        <input type="range" id="topLeft" value="0">
 
-        <h3 for="tr">Top Right:</h3>
-        <input type="range" id="tr" value="0">
+        <h3 id="topRight">Top Right:</h3>
+        <input type="range" id="topRight" value="0">
 
-        <h3 for="bl">Bottom Left:</h3>
-        <input type="range" id="bl" value="0">
+        <h3 id="bottomLeft">Bottom Left:</h3>
+        <input type="range" id="bottomLeft" value="0">
 
-        <h3 for="br">Bottom Right:</h3>
-        <input type="range" id="br" value="0">
+        <h3 id="bottomRight">Bottom Right:</h3>
+        <input type="range" id="bottomRight" value="0">
     </div>
 
     <script src="./js/app.js"></script>
